--- a/src/site/asciidoc/user_guide.adoc
+++ b/src/site/asciidoc/user_guide.adoc
@@ -25,3 +25,5 @@ include::using.adoc[]
 include::migration.adoc[]
 include::streaming.adoc[]
 include::attachments.adoc[]
+include::best_practice.adoc[]
+include::resources.adoc[]
