--- a/src/site/asciidoc/user_guide.adoc
+++ b/src/site/asciidoc/user_guide.adoc
@@ -25,5 +25,6 @@ include::using.adoc[]
 include::migration.adoc[]
 include::streaming.adoc[]
 include::attachments.adoc[]
+include::topics.adoc[]
 include::best_practice.adoc[]
 include::resources.adoc[]
