More work on the config user guide
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1844746 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/asciidoc/user_guide.adoc
+++ b/src/site/asciidoc/user_guide.adoc
@@ -23,6 +23,7 @@
 include::what.adoc[]
 include::using.adoc[]
 include::migration.adoc[]
+include::config.adoc[]
 include::streaming.adoc[]
 include::attachments.adoc[]
 include::topics.adoc[]
