--- a/src/site/asciidoc/config.adoc
+++ b/src/site/asciidoc/config.adoc
@@ -1,155 +1,89 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
+//
+// Licensed to the Apache Software Foundation (ASF) under one
+// or more contributor license agreements.  See the NOTICE file
+// distributed with this work for additional information
+// regarding copyright ownership.  The ASF licenses this file
+// to you under the Apache License, Version 2.0 (the
+// "License"); you may not use this file except in compliance
+// with the License.  You may obtain a copy of the License at
+//
+//   http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing,
+// software distributed under the License is distributed on an
+// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+// KIND, either express or implied.  See the License for the
+// specific language governing permissions and limitations
+// under the License.
+//
 
-      http://www.apache.org/licenses/LICENSE-2.0
+== WSS4J configuration
 
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-<document>
-<body>
-<section name="WSS4J configuration">
-<p>
-This page describes how to use configure Apache WSS4J. This page only applies
-to WSS4J 2.1.x, 2.0.x and 1.6.x, a lot of the properties have changed since
-WSS4J 1.5.x.
-</p>
-<subsection name="Crypto properties">
-<p>
+This section describes how to use configure Apache WSS4J. This page only applies
+to WSS4J 2.x, and 1.6.x, a lot of the properties have changed since WSS4J 1.5.x.
+
+=== Crypto properties
+
 Apache WSS4J uses the Crypto interface to get keys and certificates for
 encryption/decryption and for signature creation/verification. WSS4J ships
 with three implementations:
-</p>
-<ul>
-<li><a href="http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/crypto/Merlin.java?view=markup">
-Merlin</a>: The standard implementation, based around two JDK keystores for
-key/cert retrieval, and trust verification.</li>
-<li><a href="http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/crypto/CertificateStore.java?view=markup">
-CertificateStore</a>: Holds an array of X509 Certificates. Can only be used
-for encryption and signature verification.</li>
-<li><a href="http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/crypto/MerlinDevice.java?view=markup">
-MerlinDevice</a>: Based on Merlin, allows loading of keystores using a null
-InputStream - for example on a smart-card device.</li>
-</ul>
-<p>
+
+ * http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/crypto/Merlin.java?view=markup[
+Merlin]: The standard implementation, based around two JDK keystores for
+key/cert retrieval, and trust verification.
+ * http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/crypto/CertificateStore.java?view=markup[
+CertificateStore]: Holds an array of X509 Certificates. Can only be used
+for encryption and signature verification.
+ * http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/crypto/MerlinDevice.java?view=markup[
+MerlinDevice]: Based on Merlin, allows loading of keystores using a null
+InputStream - for example on a smart-card device.
+
 For more information on the Crypto implementations see the
-<a href="http://ws.apache.org/wss4j/topics.html#Crypto_Interface">Special
-Topics page</a>. It is possible to instantiate a Crypto implementation
+http://ws.apache.org/wss4j/topics.html#Crypto_Interface[Special
+Topics page]. It is possible to instantiate a Crypto implementation
 directly, but it can also be loaded via a properties file. For Apache WSS4J
 2.0.0 onwards, the property names ${PREFIX} below is "org.apache.wss4j.crypto".
 For Apache WSS4J 1.6.x, the property names ${PREFIX} below is
 "org.apache.ws.security.crypto". WSS4J 2.0.0 onwards will also accept the older
 ${PREFIX} value. The property values for the standard Merlin implementation
 are as follows:
-</p>
-<p>
-General properties:
-</p>
-<table name="General Properties">
-<tr>
-<th>Property name</th>
-<th>Property value</th>
-</tr>
-<tr>
-<td>${PREFIX}.provider</td>
-<td>WSS4J specific provider used to create Crypto instances. Defaults to 
-"org.apache.wss4j.common.crypto.Merlin".</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.x509crl.file</td>
-<td>The location of an (X509) CRL file to use.</td>
-</tr>
-</table>
-<p>
-Keystore properties:
-</p>
-<table name="Merlin Keystore Properties">
-<tr>
-<th>Property name</th>
-<th>Property value</th>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.keystore.provider</td>
-<td>The provider used to load keystores. Defaults to installed provider.</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.cert.provider</td>
-<td>The provider used to load certificates. Defaults to keystore provider.</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.keystore.file</td>
-<td>The location of the keystore</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.keystore.password</td>
-<td>The password used to load the keystore. Default value is "security".</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.keystore.type</td>
-<td>Type of keystore. Defaults to: java.security.KeyStore.getDefaultType())</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.keystore.alias</td>
-<td>The default keystore alias to use, if none is specified.</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.keystore.private.password</td>
-<td>The default password used to load the private key.</td>
-</tr>
-</table>
-<p>
-TrustStore properties:
-</p>
-<table name="Merlin TrustStore properties">
-<tr>
-<th>Property name</th>
-<th>Property value</th>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.load.cacerts</td>
-<td>Whether or not to load the CA certs in ${java.home}/lib/security/cacerts (default is false)</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.truststore.file</td>
-<td>The location of the truststore</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.truststore.password </td>
-<td>The truststore password. Defaults to "changeit".</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.truststore.type</td>
-<td>The truststore type. Defaults to: java.security.KeyStore.getDefaultType().</td>
-</tr>
-<tr>
-<td>${PREFIX}.merlin.truststore.provider</td>
-<td><b>WSS4J 2.1.5</b> The provider used to load truststores. By default it's the same as the keystore provider. Set to an empty value to force use of the JRE's default provider.</td>
-</tr>
-</table>
+
+==== General properties
+
+ * ${PREFIX}.provider - WSS4J specific provider used to create Crypto instances. Defaults to 
+"org.apache.wss4j.common.crypto.Merlin".
+ * ${PREFIX}.merlin.x509crl.file - The location of an (X509) CRL file to use.
+
+==== Merlin Keystore Properties
+
+ * ${PREFIX}.merlin.keystore.provider - The provider used to load keystores. Defaults to installed provider.
+ * ${PREFIX}.merlin.cert.provider - The provider used to load certificates. Defaults to keystore provider.
+ * ${PREFIX}.merlin.keystore.file - The location of the keystore
+ * ${PREFIX}.merlin.keystore.password - The password used to load the keystore. Default value is "security".
+ * ${PREFIX}.merlin.keystore.type - Type of keystore. Defaults to: java.security.KeyStore.getDefaultType())
+ * ${PREFIX}.merlin.keystore.alias - The default keystore alias to use, if none is specified.
+ * ${PREFIX}.merlin.keystore.private.password - The default password used to load the private key.
+
+==== Merlin TrustStore properties
+
+ * ${PREFIX}.merlin.load.cacerts - Whether or not to load the CA certs in ${java.home}/lib/security/cacerts (default is false)
+ * ${PREFIX}.merlin.truststore.file - The location of the truststore
+ * ${PREFIX}.merlin.truststore.password - The truststore password. Defaults to "changeit".
+ * ${PREFIX}.merlin.truststore.type - The truststore type. Defaults to: java.security.KeyStore.getDefaultType().
+ * ${PREFIX}.merlin.truststore.provider - *WSS4J 2.1.5* The provider used to load truststores. By default it's the same as the keystore provider. Set to an empty value to force use of the JRE's default provider.
  
-</subsection>
-<subsection name="SAML properties">
-<p>
-<b>WSS4J 1.6.x only</b> Apache WSS4J 1.6.x uses the SAMLIssuer interface to
+=== SAML properties
+
+*WSS4J 1.6.x only* Apache WSS4J 1.6.x uses the SAMLIssuer interface to
 configure the creation and signing of a SAML Assertion. In Apache WSS4J 2.0.0,
 the SAMLIssuer functionality has been moved to the SAMLCallback, so that the
 CallbackHandler used to create a SAML Assertion is responsible for all of the
 signing configuration as well.
-</p>
-<p>
+
 WSS4J 1.6.x ships with a default "SAMLIssuerImpl" implementation. It is
 possible to instantiate a SAMLIssuer implementation directly, but it can also
 be loaded via a properties file. The property values are as follows:
-</p>
+
 <table name="SAMLIssuer properties">
 <tr>
 <th>Property name</th>
