--- a/src/site/asciidoc/config.adoc
+++ b/src/site/asciidoc/config.adoc
@@ -133,335 +133,121 @@ The configuration tags for Actions are as follows:
 
 The configuration tags for WSHandler user properties are as follows:
 
- * ACTOR
- * "actor"
- * The actor or role name of the wsse:Security header.
-</tr>
-<tr>
- * USER
- * "user"
- * The user's name. Consult the Javadoc for an explanation of this property.
-
-</tr>
-<tr>
- * ENCRYPTION_USER
- * "encryptionUser"
- * The user's name for encryption. Consult the Javadoc for an explanation of
+ * ACTOR ("actor") - The actor or role name of the wsse:Security header.
+ * USER  ("user") - The user's name. Consult the Javadoc for an explanation of this property.
+ * ENCRYPTION_USER ("encryptionUser") - The user's name for encryption. Consult the Javadoc for an explanation of
 this property.
-</tr>
-<tr>
- * SIGNATURE_USER
- * "signatureUser"
- * The user's name for signature. Consult the Javadoc for an explanation of
+ * SIGNATURE_USER ("signatureUser") - The user's name for signature. Consult the Javadoc for an explanation of
 this property.
-</tr>
-<tr>
- * USE_REQ_SIG_CERT
- * "useReqSigCert"
- * A special value for ENCRYPTION_USER. Consult the Javadoc for an
+ * USE_REQ_SIG_CERT ("useReqSigCert") - A special value for ENCRYPTION_USER. Consult the Javadoc for an
 explanation of this property.
-</tr>
-</table>
-<p>
+
+==== Callback class and Property File configuration tags
+
 The configuration tags for callback class and property file configuration are
 summarised here:
-</p>
-<table name="Callback class and Property File configuration tags">
-<tr>
-<th>Tag name</th>
-<th>Tag value</th>
-<th>Tag meaning</th>
-</tr>
-<tr>
- * PW_CALLBACK_CLASS
- * passwordCallbackClass
- * The CallbackHandler implementation class used to obtain passwords.
-</tr>
-<tr>
- * PW_CALLBACK_REF
- * passwordCallbackRef
- * The CallbackHandler implementation object used to obtain passwords.
-</tr>
-<tr>
- * SAML_CALLBACK_CLASS
- * samlCallbackClass
- * The CallbackHandler implementation class used to construct SAML Assertions.
 
-</tr>
-<tr>
- * SAML_CALLBACK_REF
- * samlCallbackRef
- * The CallbackHandler implementation object used to construct SAML Assertions.
-</tr>
-<tr>
- * <b>WSS4J 1.6.x only</b> ENC_CALLBACK_CLASS
- * embeddedKeyCallbackClass
- * The CallbackHandler implementation class used to get the key associated
+ * PW_CALLBACK_CLASS (passwordCallbackClass) - The CallbackHandler implementation class used to obtain passwords.
+ * PW_CALLBACK_REF (passwordCallbackRef) - The CallbackHandler implementation object used to obtain passwords.
+ * SAML_CALLBACK_CLASS (samlCallbackClass) - The CallbackHandler implementation class used to construct SAML Assertions.
+ * SAML_CALLBACK_REF (samlCallbackRef) - The CallbackHandler implementation object used to construct SAML Assertions.
+ * *WSS4J 1.6.x only* ENC_CALLBACK_CLASS (embeddedKeyCallbackClass) - The CallbackHandler implementation class used to get the key associated
 with a key name.
-</tr>
-<tr>
- * <b>WSS4J 1.6.x only</b> ENC_CALLBACK_REF
- * embeddedKeyCallbackRef
- * The CallbackHandler implementation object used to get the key associated
+ * *WSS4J 1.6.x only* ENC_CALLBACK_REF (embeddedKeyCallbackRef) - The CallbackHandler implementation object used to get the key associated
 with a key name.
-</tr>
-<tr>
- * SIG_PROP_FILE
- * signaturePropFile
- * The path of the crypto property file to use for Signature.
-</tr>
-<tr>
- * SIG_PROP_REF_ID
- * signaturePropRefId
- * The String ID that is used to store a reference to the Crypto object or
+ * SIG_PROP_FILE (signaturePropFile) - The path of the crypto property file to use for Signature.
+ * SIG_PROP_REF_ID (signaturePropRefId) - The String ID that is used to store a reference to the Crypto object or
 the Crypto Properties object for Signature.
-
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> SIG_VER_PROP_FILE
- * signatureVerificationPropFile
- * The path of the crypto property file to use for Signature verification.
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> SIG_VER_PROP_REF_ID
- * signatureVerificationPropRefId
- * The String ID that is used to store a reference to the Crypto object or
+ * *WSS4J 2.0.0* SIG_VER_PROP_FILE (signatureVerificationPropFile) - The path of the crypto property file to use for Signature verification.
+ * *WSS4J 2.0.0* SIG_VER_PROP_REF_ID (signatureVerificationPropRefId) - The String ID that is used to store a reference to the Crypto object or
 the Crypto Properties object for Signature verification.
-
-</tr>
-<tr>
- * DEC_PROP_FILE
- * decryptionPropFile
- * The path of the crypto property file to use for Decryption.
-</tr>
-<tr>
- * DEC_PROP_REF_ID
- * decryptionPropRefId
- * The String ID that is used to store a reference to the Crypto object or
+ * DEC_PROP_FILE (decryptionPropFile) - The path of the crypto property file to use for Decryption.
+ * DEC_PROP_REF_ID (decryptionPropRefId) - The String ID that is used to store a reference to the Crypto object or
 the Crypto Properties object for decryption.
-</tr>
-<tr>
- * ENC_PROP_FILE
- * encryptionPropFile
- * The path of the crypto property file to use for encryption.
-</tr>
-<tr>
- * ENC_PROP_REF_ID
- * encryptionPropRefId
- * The String ID that is used to store a reference to the Crypto object or
+ * ENC_PROP_FILE (encryptionPropFile) - The path of the crypto property file to use for encryption.
+ * ENC_PROP_REF_ID (encryptionPropRefId) - The String ID that is used to store a reference to the Crypto object or
 the Crypto Properties object for encryption.
-</tr>
-<tr>
- * SAML_PROP_FILE
- * samlPropFile
- * The path of the property file to use for creating SAML Assertions.
-</tr>
-</table>
-<p>
+ * SAML_PROP_FILE (samlPropFile) - The path of the property file to use for creating SAML Assertions.
+
+==== Boolean configuration tags
+
 The configuration tags for properties that are configured via a boolean
 parameter (i.e. "true" or "false") are as follows:
-</p>
-<table name="Boolean configuration tags">
-<tr>
-<th>Tag name</th>
-<th>Tag value</th>
-<th>Tag meaning</th>
-</tr>
-<tr>
- * ENABLE_SIGNATURE_CONFIRMATION
- * enableSignatureConfirmation
- * Whether to enable signature confirmation or not. Default is "false".
-</tr>
-<tr>
- * MUST_UNDERSTAND
- * mustUnderstand
- * Set the outbound MustUnderstand flag or not. Default is "true".
-</tr>
-<tr>
- * IS_BSP_COMPLIANT
- * isBSPCompliant
- * Whether or not to ensure compliance with the BSP 1.1 spec. Default is
+
+ * ENABLE_SIGNATURE_CONFIRMATION (enableSignatureConfirmation) - Whether to enable signature confirmation or not. Default is "false".
+ * MUST_UNDERSTAND (mustUnderstand) - Set the outbound MustUnderstand flag or not. Default is "true".
+ * IS_BSP_COMPLIANT (isBSPCompliant) - Whether or not to ensure compliance with the BSP 1.1 spec. Default is
 "true".
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> ADD_INCLUSIVE_PREFIXES
- * addInclusivePrefixes
- * Whether to add an InclusiveNamespaces PrefixList as a
+ * *WSS4J 2.0.0* ADD_INCLUSIVE_PREFIXES (addInclusivePrefixes) - Whether to add an InclusiveNamespaces PrefixList as a
 CanonicalizationMethod child when generating Signatures using
 WSConstants.C14N_EXCL_OMIT_COMMENTS. Default is "true".
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> ADD_USERNAMETOKEN_NONCE
- * addUsernameTokenNonce
- * Whether to add a Nonce Element to a UsernameToken (for plaintext). Default
+ * *WSS4J 2.0.0* ADD_USERNAMETOKEN_NONCE (addUsernameTokenNonce) - Whether to add a Nonce Element to a UsernameToken (for plaintext). Default
 is "false"
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> ADD_USERNAMETOKEN_CREATED
- * addUsernameTokenCreated
- * Whether to add a Created Element to a UsernameToken (for plaintext).
+ * *WSS4J 2.0.0* ADD_USERNAMETOKEN_CREATED (addUsernameTokenCreated) - Whether to add a Created Element to a UsernameToken (for plaintext).
 Default is "false"
-</tr>
-<tr>
- * HANDLE_CUSTOM_PASSWORD_TYPES
- * handleCustomPasswordTypes
- * Whether to allow non-standard password types in a UsernameToken. Default
+ * HANDLE_CUSTOM_PASSWORD_TYPES (handleCustomPasswordTypes) - Whether to allow non-standard password types in a UsernameToken. Default
 is "false".
-</tr>
-<tr>
- * <b>WSS4J 1.6.x only</b> PASSWORD_TYPE_STRICT
- * passwordTypeStrict
- * Whether to enable strict Username Token password type handling. Default is
+ * *WSS4J 1.6.x only* PASSWORD_TYPE_STRICT (passwordTypeStrict) - Whether to enable strict Username Token password type handling. Default is
 "false".
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> ALLOW_USERNAMETOKEN_NOPASSWORD
- * allowUsernameTokenNoPassword
- * Whether a UsernameToken with no password element is allowed. Default is
+ * *WSS4J 2.0.0* ALLOW_USERNAMETOKEN_NOPASSWORD (allowUsernameTokenNoPassword) - Whether a UsernameToken with no password element is allowed. Default is
 "false".
-</tr>
-<tr>
- * REQUIRE_SIGNED_ENCRYPTED_DATA_ELEMENTS
- * requireSignedEncryptedDataElements
- * Whether the engine needs to enforce EncryptedData elements are in a signed
+ * REQUIRE_SIGNED_ENCRYPTED_DATA_ELEMENTS (requireSignedEncryptedDataElements) - Whether the engine needs to enforce EncryptedData elements are in a signed
 subtree of the document. Default is "false".
-</tr>
-<tr>
- * <b>WSS4J 1.6.x only</b> USE_DERIVED_KEY
- * useDerivedKey
- * Whether to use the standard UsernameToken Key Derivation algorithm.
+ * *WSS4J 1.6.x only* USE_DERIVED_KEY (useDerivedKey) - Whether to use the standard UsernameToken Key Derivation algorithm.
 Default is "true".
-</tr>
-<tr>
- * ALLOW_NAMESPACE_QUALIFIED_PASSWORD_TYPES
- * allowNamespaceQualifiedPasswordTypes
- * Whether (wsse) namespace qualified password types are accepted when
+ * ALLOW_NAMESPACE_QUALIFIED_PASSWORD_TYPES (allowNamespaceQualifiedPasswordTypes) - Whether (wsse) namespace qualified password types are accepted when
 processing UsernameTokens. Default is "false".
-</tr>
-<tr>
- * ENABLE_REVOCATION
- * enableRevocation
- * Whether to enable Certificate Revocation List (CRL) checking when
+ * ENABLE_REVOCATION (enableRevocation) - Whether to enable Certificate Revocation List (CRL) checking when
 verifying trust in a certificate. Default is "false".
-</tr>
-<tr>
- * USE_ENCODED_PASSWORDS
- * useEncodedPasswords
- * Set whether to treat passwords as binary values for Username Tokens.
+ * USE_ENCODED_PASSWORDS (useEncodedPasswords) - Set whether to treat passwords as binary values for Username Tokens.
 Default is "false". DOM code only.
-</tr>
-<tr>
- * USE_SINGLE_CERTIFICATE
- * useSingleCertificate
- * Whether to use a single certificate or a whole certificate chain to
+ * USE_SINGLE_CERTIFICATE (useSingleCertificate) - Whether to use a single certificate or a whole certificate chain to
 construct a BinarySecurityToken. Default is "true".
-</tr>
-<tr>
- * USE_DERIVED_KEY_FOR_MAC
- * useDerivedKeyForMAC
- * Whether to use the Username Token derived key for a MAC. Default is
+ * USE_DERIVED_KEY_FOR_MAC (useDerivedKeyForMAC) - Whether to use the Username Token derived key for a MAC. Default is
 "true".
-</tr>
-<tr>
- * TIMESTAMP_PRECISION
- * precisionInMilliseconds
- * Set whether outbound timestamps have precision in milliseconds. Default is
+ * TIMESTAMP_PRECISION (precisionInMilliseconds) - Set whether outbound timestamps have precision in milliseconds. Default is
 "true".
-</tr>
-<tr>
- * TIMESTAMP_STRICT
- * timestampStrict
- * Set whether to enable strict Timestamp handling, i.e. throw an exception if
+ * TIMESTAMP_STRICT (timestampStrict) - Set whether to enable strict Timestamp handling, i.e. throw an exception if
 the current receiver time is past the Expires time of the Timestamp. Default
 is "true".
-</tr>
-<tr>
- * <b>WSS4J 2.0.4/2.1.0</b> REQUIRE_TIMESTAMP_EXPIRES
- * requireTimestampExpires
- * Set the value of this parameter to true to require that a Timestamp must
+ * *WSS4J 2.0.4/2.1.0* REQUIRE_TIMESTAMP_EXPIRES (requireTimestampExpires) - Set the value of this parameter to true to require that a Timestamp must
 have an "Expires" Element. The default is "false".
-</tr>
-<tr>
- * ENC_SYM_ENC_KEY
- * encryptSymmetricEncryptionKey
- * Set whether to encrypt the symmetric encryption key or not. Default is
+ * ENC_SYM_ENC_KEY (encryptSymmetricEncryptionKey) - Set whether to encrypt the symmetric encryption key or not. Default is
 "true".
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> ALLOW_RSA15_KEY_TRANSPORT_ALGORITHM
- * allowRSA15KeyTransportAlgorithm
- * Whether to allow the RSA v1.5 Key Transport Algorithm or not. Default is
+ * *WSS4J 2.0.0* ALLOW_RSA15_KEY_TRANSPORT_ALGORITHM (allowRSA15KeyTransportAlgorithm) - Whether to allow the RSA v1.5 Key Transport Algorithm or not. Default is
 "false".
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> VALIDATE_SAML_SUBJECT_CONFIRMATION
- * validateSamlSubjectConfirmation
- * Whether to validate the SubjectConfirmation requirements of a received
+ * *WSS4J 2.0.0* VALIDATE_SAML_SUBJECT_CONFIRMATION (validateSamlSubjectConfirmation) - Whether to validate the SubjectConfirmation requirements of a received
 SAML Token (sender-vouches or holder-of-key). Default is "true".
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> INCLUDE_SIGNATURE_TOKEN
- * includeSignatureToken
- * Whether to include the Signature Token in the security header as well or
+ * *WSS4J 2.0.0* INCLUDE_SIGNATURE_TOKEN (includeSignatureToken) - Whether to include the Signature Token in the security header as well or
 not (for IssuerSerial, Thumbprint, SKI cases). Default is "false"
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> INCLUDE_ENCRYPTION_TOKEN
- * includeEncryptionToken
- * Whether to include the Encryption Token in the security header as well or
+ * *WSS4J 2.0.0* INCLUDE_ENCRYPTION_TOKEN (includeEncryptionToken) - Whether to include the Encryption Token in the security header as well or
 not (for IssuerSerial, Thumbprint, SKI cases). Default is "false"
-</tr>
-<tr>
- * <b>WSS4J 2.0.0</b> USE_2005_12_NAMESPACE
- * use200512Namespace
- * Whether to use the 2005/12 namespace for SecureConveration + DerivedKeys,
+ * *WSS4J 2.0.0* USE_2005_12_NAMESPACE (use200512Namespace) - Whether to use the 2005/12 namespace for SecureConveration + DerivedKeys,
 or the older namespace. The default is "true"
-</tr>
-<tr>
- * <b>WSS4J 2.1.2/2.0.5</b> GET_SECRET_KEY_FROM_CALLBACK_HANDLER
- * getSecretKeyFromCallbackHandler
- * Whether to get a secret key from a CallbackHandler or not for encryption
+ * *WSS4J 2.1.2/2.0.5* GET_SECRET_KEY_FROM_CALLBACK_HANDLER (getSecretKeyFromCallbackHandler) - Whether to get a secret key from a CallbackHandler or not for encryption
 only. The default is false. If set to true WSS4J attempts to get the secret
 key from the CallbackHandler instead of generating a random key internally.
-
-</tr>
-<tr>
- * <b>WSS4J 2.1.2/2.0.5</b> STORE_BYTES_IN_ATTACHMENT
- * storeBytesInAttachment
- * Whether to store bytes (CipherData or BinarySecurityToken) in an
+ * *WSS4J 2.1.2/2.0.5* STORE_BYTES_IN_ATTACHMENT (storeBytesInAttachment) - Whether to store bytes (CipherData or BinarySecurityToken) in an
 attachment. The default is false, meaning that bytes are BASE-64 encoded and
 "inlined" in the message. Setting this to true is more efficient, as it means
 that the BASE-64 encoding step can be skipped. For this to work, a
 CallbackHandler must be set on RequestData that can handle attachments.
-
-</tr>
-<tr>
- * <b>WSS4J 2.1.2/2.0.5</b> EXPAND_XOP_INCLUDE_FOR_SIGNATURE
- * expandXOPIncludeForSignature
- * (Deprecated in 2.2.0). Whether to expand xop:Include Elements encountered when verifying a
+ * *WSS4J 2.1.2/2.0.5* EXPAND_XOP_INCLUDE_FOR_SIGNATURE (expandXOPIncludeForSignature) - (Deprecated in 2.2.0). Whether to expand xop:Include Elements encountered when verifying a
 Signature. The default is true, meaning that the relevant attachment bytes are
 BASE-64 encoded and inserted into the Element. This ensures that the actual
 bytes are signed, and not just the reference.
-
-</tr>
-<tr>
- * <b>WSS4J 2.2.0</b> EXPAND_XOP_INCLUDE
- * expandXOPInclude
- * 
-Whether to search for and expand xop:Include Elements for encryption and
+ * *WSS4J 2.2.0* EXPAND_XOP_INCLUDE (expandXOPInclude) - Whether to search for and expand xop:Include Elements for encryption and
 signature (on the outbound side) or for signature verification (on the inbound
 side). The default is false on the outbound side and true on the inbound side.
 What this means on the inbound side, is that the relevant attachment bytes are
 BASE-64 encoded and inserted into the Element. This ensures that the actual
 bytes are signed, and not just the reference.
 
-</tr>
-</table>
-<p>
+==== Non-boolean configuration tags
+
 The configuration tags for properties that are configured via a non-boolean
 parameter are as follows:
-</p>
-<table name="Non-boolean configuration tags">
+
 <tr>
 <th>Tag name</th>
 <th>Tag value</th>
